--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,5 +24,7 @@ spring.devtools.restart.additional-paths=file:src/main/resources/
 spring.web.resources.cache.period=0
 spring.devtools.livereload.enabled=true
 
+spring.jpa.open-in-view=true
+
 spring.servlet.multipart.max-file-size=30MB
 spring.servlet.multipart.max-request-size=30MB
