--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,5 @@ spring.jpa.open-in-view=true
 
 spring.servlet.multipart.max-file-size=30MB
 spring.servlet.multipart.max-request-size=30MB
+
+spring.messages.encoding=UTF-8
