--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.servlet.session.timeout=1440m
 
 db.telbook.datasource.class-driver = com.ibm.db2.jcc.DB2Driver
 db.telbook.datasource.url =
-db.telbook.datasource.username =
+db.telbook.datasource.username = 
 db.telbook.datasource.password =
 
 logging.level.org.hibernate.SQL = DEBUG
@@ -21,13 +21,17 @@ spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
 
 spring.thymeleaf.suffix=.html
-spring.thymeleaf.prefix=file:src/main/resources/templates/
-spring.web.resources.static-locations=file:src/main/resources/static/
-spring.devtools.restart.additional-paths=file:src/main/resources/
-#spring.thymeleaf.check-template-location=false
-#spring.thymeleaf.prefix=classpath:/templates/
-#spring.web.resources.static-locations=classpath:/static/
-#spring.devtools.restart.additional-paths=classpath:/static/,classpath:/templates/
+#при разработке
+#spring.thymeleaf.prefix=file:src/main/resources/templates/
+#spring.web.resources.static-locations=file:src/main/resources/static/
+#spring.devtools.restart.additional-paths=file:src/main/resources/
+
+spring.thymeleaf.check-template-location=false
+#при создания jar
+spring.thymeleaf.prefix=classpath:/templates/
+spring.web.resources.static-locations=classpath:/static/
+spring.devtools.restart.additional-paths=classpath:/static/,classpath:/templates/
+
 spring.web.resources.cache.period=0
 spring.devtools.livereload.enabled=true
 
